modified icon notification

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <resources>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
+    <color name="blue">#0522b3</color>
 </resources>
